testData/invalid-files/invalid-ann-atoi/pos2.ann
T1	Organization INVALID 99	YouTube